atualização do tratamento de resultados vazios

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     />
                     <button type="submit">Enviar</button>
                 </form>
-                <div id="render-space"><p id="default-p">Nenhum resultado</p></div>
+                <div id="render-space"><p class="no-results">Nenhum resultado</p></div>
             </div>
         </main>
     </body>
